# my_solana_daap

./: Anchor.toml
app/: package.json  pnpm-lock.yaml
app/src/: App.js  index.js  my_solana_dapp.json
programs/my_solana_dapp/: Cargo.toml
programs/my_solana_dapp/src/: lib.rs
tests/: my_solana_dapp.js
